<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/txtLogo"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtBimestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtBimestre"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMateria"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="@string/txtMateria"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtResultado"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMedia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:gravity="end"
                android:text="@string/txtMedia"
                android:textColor="#006400"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txtEditar"
                android:gravity="end"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:src="@android:drawable/ic_menu_view" />

            <ImageView
                android:id="@+id/imgDeletar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txtDeletar"
                android:gravity="end"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:src="@android:drawable/ic_menu_delete" />

            <ImageView
                android:id="@+id/imgEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txtEditar"
                android:gravity="end"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:src="@android:drawable/ic_menu_edit" />

            <ImageView
                android:id="@+id/imgSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/txtEditar"
                android:gravity="end"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:src="@android:drawable/ic_menu_save" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>